[package]
name = "rust-atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = [
  "sdl2",
  "sdl2-image[libjpeg-turbo,tiff,libwebp]",
  "sdl2-ttf",
  "sdl2-gfx",
  "sdl2-mixer",
]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[dependencies]
geojson = { version = "*", features = ["geo-types"] }
specs = "0.18.0"
specs-derive = "0.4.1"
triangulate = "0.1.0"
geo = "0.23.0"
geo-types = "0.7.7"
rayon = "1.5.3"
load_file = "1.0.1"
