[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_prototype_lyon = "0.6.0"
geojson = { version = "*", features = ["geo-types"] }
geo = "0.23.0"
geo-types = "0.7.7"
rayon = "1.5.3"
load_file = "1.0.1"
mercator = "0.1.2"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
